# OfflineJudge

./: .gitignore  CMakeLists.txt  README.md  Run.cpp  judge.sh
Solution/: Sol  Solve.cpp
src/: Run.cpp  color.h
